--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>What is the capital of India?</h2>
+	<input type="radio" name="color" value="red">New Delhi<br>
+	<input type="radio" name="color" value="red">Mumbai<br>
+	<blockquote cite ="https://en.wikipedia.org/wiki/New_Delhi" id="a">
+		<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
+	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
